[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/API_Connection.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/landscape.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Highscore.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/PilotCommandCondensedItalic-p7691.otf" type="DynamicFontData" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="DynamicFont" id=2]
size = 33
extra_spacing_top = 8
extra_spacing_bottom = 9
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 33
extra_spacing_top = 8
extra_spacing_bottom = 9
font_data = ExtResource( 4 )

[node name="Highscore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 5.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 284, 199 )
texture = ExtResource( 2 )

[node name="Main Menu" type="Button" parent="."]
margin_left = -18.0
margin_top = 537.0
margin_right = 142.0
margin_bottom = 602.0
text = "Main Menu"
script = SubResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Leaderboard" type="Sprite" parent="."]
position = Vector2( 568.168, 300 )
scale = Vector2( 0.536239, 0.392646 )
texture = ExtResource( 3 )

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 262.0
margin_top = 55.0
margin_right = 559.0
margin_bottom = 604.0
custom_fonts/normal_font = SubResource( 2 )

[node name="Score" type="RichTextLabel" parent="."]
anchor_right = 0.081
margin_left = 565.0
margin_top = 58.0
margin_right = 858.056
margin_bottom = 605.0
custom_fonts/normal_font = SubResource( 3 )

[connection signal="tree_entered" from="." to="." method="_on_Highscore_tree_entered"]
[connection signal="button_down" from="Main Menu" to="." method="_on_Main_Menu_button_down"]
[connection signal="button_up" from="Main Menu" to="." method="_Get_Api_Data"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="tree_entered" from="HTTPRequest" to="." method="_on_HTTPRequest_tree_entered"]
